Added region and scaled to resale_price to 100k dollars

--- a/main.ipynb
+++ b/main.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 737,
+   "execution_count": 157,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 738,
+   "execution_count": 158,
    "metadata": {},
    "outputs": [
     {
@@ -146,7 +146,7 @@
        "4      265000.0  "
       ]
      },
-     "execution_count": 738,
+     "execution_count": 158,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -159,7 +159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 739,
+   "execution_count": 159,
    "metadata": {},
    "outputs": [
     {
@@ -263,7 +263,7 @@
        "4  62 years 05 months      265000.0  "
       ]
      },
-     "execution_count": 739,
+     "execution_count": 159,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -277,7 +277,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 740,
+   "execution_count": 160,
    "metadata": {},
    "outputs": [
     {
@@ -344,7 +344,7 @@
        "4       2017           1"
       ]
      },
-     "execution_count": 740,
+     "execution_count": 160,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -360,9 +360,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 741,
+   "execution_count": 161,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['ANG MO KIO' 'BEDOK' 'BISHAN' 'BUKIT BATOK' 'BUKIT MERAH' 'BUKIT PANJANG'\n",
+      " 'BUKIT TIMAH' 'CENTRAL AREA' 'CHOA CHU KANG' 'CLEMENTI' 'GEYLANG'\n",
+      " 'HOUGANG' 'JURONG EAST' 'JURONG WEST' 'KALLANG/WHAMPOA' 'MARINE PARADE'\n",
+      " 'PASIR RIS' 'PUNGGOL' 'QUEENSTOWN' 'SEMBAWANG' 'SENGKANG' 'SERANGOON'\n",
+      " 'TAMPINES' 'TOA PAYOH' 'WOODLANDS' 'YISHUN']\n"
+     ]
+    },
     {
      "data": {
       "text/plain": [
@@ -395,18 +406,75 @@
        "Name: town, dtype: int64"
       ]
      },
-     "execution_count": 741,
+     "execution_count": 161,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "print(data['town'].unique())\n",
     "data['town'].value_counts()\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 742,
+   "execution_count": 162,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "EAST       53093\n",
+       "NORTH      36986\n",
+       "WEST       34107\n",
+       "CENTRAL    15126\n",
+       "SOUTH      10391\n",
+       "Name: region, dtype: int64"
+      ]
+     },
+     "execution_count": 162,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Classification based on region\n",
+    "region = {\n",
+    "    'ANG MO KIO': 'CENTRAL',\n",
+    "    'BEDOK': 'EAST',\n",
+    "    'BISHAN': 'CENTRAL',\n",
+    "    'BUKIT BATOK': 'WEST',\n",
+    "    'BUKIT MERAH': 'SOUTH',\n",
+    "    'BUKIT PANJANG': 'WEST',\n",
+    "    'BUKIT TIMAH': 'SOUTH',\n",
+    "    'CENTRAL AREA': 'CENTRAL',\n",
+    "    'CHOA CHU KANG': 'WEST',\n",
+    "    'CLEMENTI': 'WEST',\n",
+    "    'GEYLANG': 'EAST',\n",
+    "    'HOUGANG': 'EAST',\n",
+    "    'JURONG EAST': 'WEST',\n",
+    "    'JURONG WEST': 'WEST',\n",
+    "    'KALLANG/WHAMPOA': 'EAST',\n",
+    "    'MARINE PARADE': 'EAST',\n",
+    "    'PASIR RIS': 'EAST',\n",
+    "    'PUNGGOL': 'EAST',\n",
+    "    'QUEENSTOWN': 'SOUTH',\n",
+    "    'SEMBAWANG': 'NORTH',\n",
+    "    'SENGKANG': 'NORTH',\n",
+    "    'SERANGOON': 'EAST',\n",
+    "    'TAMPINES': 'EAST',\n",
+    "    'TOA PAYOH': 'CENTRAL',\n",
+    "    'WOODLANDS': 'NORTH',\n",
+    "    'YISHUN': 'NORTH'\n",
+    "}\n",
+    "data['region'] = data['town'].transform(lambda t: region[t])\n",
+    "data = data.drop(['town'], axis=1)\n",
+    "data['region'].value_counts()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 163,
    "metadata": {},
    "outputs": [
     {
@@ -422,7 +490,7 @@
        "Name: flat_type, dtype: int64"
       ]
      },
-     "execution_count": 742,
+     "execution_count": 163,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -433,7 +501,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 743,
+   "execution_count": 164,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -443,7 +511,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 744,
+   "execution_count": 165,
    "metadata": {},
    "outputs": [
     {
@@ -504,7 +572,7 @@
        "4         3"
       ]
      },
-     "execution_count": 744,
+     "execution_count": 165,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -526,7 +594,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 745,
+   "execution_count": 166,
    "metadata": {},
    "outputs": [
     {
@@ -552,7 +620,7 @@
        "Name: storey_range, dtype: int64"
       ]
      },
-     "execution_count": 745,
+     "execution_count": 166,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -563,7 +631,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 746,
+   "execution_count": 167,
    "metadata": {},
    "outputs": [
     {
@@ -624,7 +692,7 @@
        "4           2"
       ]
      },
-     "execution_count": 746,
+     "execution_count": 167,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -644,7 +712,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 747,
+   "execution_count": 168,
    "metadata": {},
    "outputs": [
     {
@@ -664,7 +732,7 @@
        "Name: remaining_lease, Length: 663, dtype: int64"
       ]
      },
-     "execution_count": 747,
+     "execution_count": 168,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -675,7 +743,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 748,
+   "execution_count": 169,
    "metadata": {},
    "outputs": [
     {
@@ -736,7 +804,7 @@
        "4           62.42"
       ]
      },
-     "execution_count": 748,
+     "execution_count": 169,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -757,7 +825,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 749,
+   "execution_count": 170,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Data scaling - resale_price - dollars to 100k dollars\n",
+    "data['resale_price'] = data['resale_price'] / 100000\n",
+    "data = data.rename(columns={'resale_price': 'resale_price_100k'})\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 171,
    "metadata": {},
    "outputs": [
     {
@@ -781,71 +860,71 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>town</th>\n",
        "      <th>room_num</th>\n",
        "      <th>storey_avg</th>\n",
        "      <th>floor_area_sqm</th>\n",
        "      <th>remaining_lease</th>\n",
-       "      <th>resale_price</th>\n",
+       "      <th>resale_price_100k</th>\n",
        "      <th>year_sold</th>\n",
        "      <th>month_sold</th>\n",
+       "      <th>region</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>ANG MO KIO</td>\n",
        "      <td>2</td>\n",
        "      <td>11</td>\n",
        "      <td>44.0</td>\n",
        "      <td>61.33</td>\n",
-       "      <td>232000.0</td>\n",
+       "      <td>2.32</td>\n",
        "      <td>2017</td>\n",
        "      <td>1</td>\n",
+       "      <td>CENTRAL</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>ANG MO KIO</td>\n",
        "      <td>3</td>\n",
        "      <td>2</td>\n",
        "      <td>67.0</td>\n",
        "      <td>60.58</td>\n",
-       "      <td>250000.0</td>\n",
+       "      <td>2.50</td>\n",
        "      <td>2017</td>\n",
        "      <td>1</td>\n",
+       "      <td>CENTRAL</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>ANG MO KIO</td>\n",
        "      <td>3</td>\n",
        "      <td>2</td>\n",
        "      <td>67.0</td>\n",
        "      <td>62.42</td>\n",
-       "      <td>262000.0</td>\n",
+       "      <td>2.62</td>\n",
        "      <td>2017</td>\n",
        "      <td>1</td>\n",
+       "      <td>CENTRAL</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>ANG MO KIO</td>\n",
        "      <td>3</td>\n",
        "      <td>5</td>\n",
        "      <td>68.0</td>\n",
        "      <td>62.08</td>\n",
-       "      <td>265000.0</td>\n",
+       "      <td>2.65</td>\n",
        "      <td>2017</td>\n",
        "      <td>1</td>\n",
+       "      <td>CENTRAL</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>ANG MO KIO</td>\n",
        "      <td>3</td>\n",
        "      <td>2</td>\n",
        "      <td>67.0</td>\n",
        "      <td>62.42</td>\n",
-       "      <td>265000.0</td>\n",
+       "      <td>2.65</td>\n",
        "      <td>2017</td>\n",
        "      <td>1</td>\n",
+       "      <td>CENTRAL</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
@@ -860,58 +939,58 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>149698</th>\n",
-       "      <td>YISHUN</td>\n",
        "      <td>6</td>\n",
        "      <td>11</td>\n",
        "      <td>146.0</td>\n",
        "      <td>64.67</td>\n",
-       "      <td>800000.0</td>\n",
+       "      <td>8.00</td>\n",
        "      <td>2023</td>\n",
        "      <td>3</td>\n",
+       "      <td>NORTH</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>149699</th>\n",
-       "      <td>YISHUN</td>\n",
        "      <td>6</td>\n",
        "      <td>2</td>\n",
        "      <td>146.0</td>\n",
        "      <td>64.50</td>\n",
-       "      <td>800000.0</td>\n",
+       "      <td>8.00</td>\n",
        "      <td>2023</td>\n",
        "      <td>3</td>\n",
+       "      <td>NORTH</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>149700</th>\n",
-       "      <td>YISHUN</td>\n",
        "      <td>6</td>\n",
        "      <td>5</td>\n",
        "      <td>142.0</td>\n",
        "      <td>64.25</td>\n",
-       "      <td>770000.0</td>\n",
+       "      <td>7.70</td>\n",
        "      <td>2023</td>\n",
        "      <td>3</td>\n",
+       "      <td>NORTH</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>149701</th>\n",
-       "      <td>YISHUN</td>\n",
        "      <td>6</td>\n",
        "      <td>11</td>\n",
        "      <td>146.0</td>\n",
        "      <td>63.42</td>\n",
-       "      <td>818000.0</td>\n",
+       "      <td>8.18</td>\n",
        "      <td>2023</td>\n",
        "      <td>3</td>\n",
+       "      <td>NORTH</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>149702</th>\n",
-       "      <td>YISHUN</td>\n",
        "      <td>6</td>\n",
        "      <td>2</td>\n",
        "      <td>164.0</td>\n",
        "      <td>68.25</td>\n",
-       "      <td>975000.0</td>\n",
+       "      <td>9.75</td>\n",
        "      <td>2023</td>\n",
        "      <td>3</td>\n",
+       "      <td>NORTH</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -919,36 +998,36 @@
        "</div>"
       ],
       "text/plain": [
-       "              town  room_num  storey_avg  floor_area_sqm remaining_lease  \\\n",
-       "0       ANG MO KIO         2          11            44.0           61.33   \n",
-       "1       ANG MO KIO         3           2            67.0           60.58   \n",
-       "2       ANG MO KIO         3           2            67.0           62.42   \n",
-       "3       ANG MO KIO         3           5            68.0           62.08   \n",
-       "4       ANG MO KIO         3           2            67.0           62.42   \n",
-       "...            ...       ...         ...             ...             ...   \n",
-       "149698      YISHUN         6          11           146.0           64.67   \n",
-       "149699      YISHUN         6           2           146.0           64.50   \n",
-       "149700      YISHUN         6           5           142.0           64.25   \n",
-       "149701      YISHUN         6          11           146.0           63.42   \n",
-       "149702      YISHUN         6           2           164.0           68.25   \n",
+       "        room_num  storey_avg  floor_area_sqm remaining_lease  \\\n",
+       "0              2          11            44.0           61.33   \n",
+       "1              3           2            67.0           60.58   \n",
+       "2              3           2            67.0           62.42   \n",
+       "3              3           5            68.0           62.08   \n",
+       "4              3           2            67.0           62.42   \n",
+       "...          ...         ...             ...             ...   \n",
+       "149698         6          11           146.0           64.67   \n",
+       "149699         6           2           146.0           64.50   \n",
+       "149700         6           5           142.0           64.25   \n",
+       "149701         6          11           146.0           63.42   \n",
+       "149702         6           2           164.0           68.25   \n",
        "\n",
-       "        resale_price  year_sold  month_sold  \n",
-       "0           232000.0       2017           1  \n",
-       "1           250000.0       2017           1  \n",
-       "2           262000.0       2017           1  \n",
-       "3           265000.0       2017           1  \n",
-       "4           265000.0       2017           1  \n",
-       "...              ...        ...         ...  \n",
-       "149698      800000.0       2023           3  \n",
-       "149699      800000.0       2023           3  \n",
-       "149700      770000.0       2023           3  \n",
-       "149701      818000.0       2023           3  \n",
-       "149702      975000.0       2023           3  \n",
+       "        resale_price_100k  year_sold  month_sold   region  \n",
+       "0                    2.32       2017           1  CENTRAL  \n",
+       "1                    2.50       2017           1  CENTRAL  \n",
+       "2                    2.62       2017           1  CENTRAL  \n",
+       "3                    2.65       2017           1  CENTRAL  \n",
+       "4                    2.65       2017           1  CENTRAL  \n",
+       "...                   ...        ...         ...      ...  \n",
+       "149698               8.00       2023           3    NORTH  \n",
+       "149699               8.00       2023           3    NORTH  \n",
+       "149700               7.70       2023           3    NORTH  \n",
+       "149701               8.18       2023           3    NORTH  \n",
+       "149702               9.75       2023           3    NORTH  \n",
        "\n",
        "[149631 rows x 8 columns]"
       ]
      },
-     "execution_count": 749,
+     "execution_count": 171,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -959,7 +1038,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 750,
+   "execution_count": 172,
    "metadata": {},
    "outputs": [],
    "source": [
