--- a/main.ipynb
+++ b/main.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 157,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 158,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -146,7 +146,7 @@
        "4      265000.0  "
       ]
      },
-     "execution_count": 158,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -159,7 +159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 159,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -263,21 +263,20 @@
        "4  62 years 05 months      265000.0  "
       ]
      },
-     "execution_count": 159,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Remove redundant attributes - block, flat_model, lease_commence_date\n",
-    "data = data.drop(['block', 'street_name', 'flat_model',\n",
-    "                 'lease_commence_date'], axis=1)\n",
+    "data = data.drop(['block', 'street_name', 'flat_model', 'lease_commence_date'], axis=1)\n",
     "data.head()\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 160,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -344,7 +343,7 @@
        "4       2017           1"
       ]
      },
-     "execution_count": 160,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -354,13 +353,13 @@
     "date = pd.to_datetime(data['month'])\n",
     "data['year_sold'] = date.dt.year\n",
     "data['month_sold'] = date.dt.month\n",
-    "data = data.drop(['month'], axis=1)\n",
+    "data = data.drop('month', axis=1)\n",
     "data[['year_sold', 'month_sold']].head()\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 161,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -406,7 +405,7 @@
        "Name: town, dtype: int64"
       ]
      },
-     "execution_count": 161,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -418,7 +417,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 162,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -432,7 +431,7 @@
        "Name: region, dtype: int64"
       ]
      },
-     "execution_count": 162,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -468,13 +467,13 @@
     "    'YISHUN': 'NORTH'\n",
     "}\n",
     "data['region'] = data['town'].transform(lambda t: region[t])\n",
-    "data = data.drop(['town'], axis=1)\n",
+    "data = data.drop('town', axis=1)\n",
     "data['region'].value_counts()\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 163,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -490,7 +489,7 @@
        "Name: flat_type, dtype: int64"
       ]
      },
-     "execution_count": 163,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -501,7 +500,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 164,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -511,7 +510,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 165,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -572,7 +571,7 @@
        "4         3"
       ]
      },
-     "execution_count": 165,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -594,7 +593,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 166,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -620,7 +619,7 @@
        "Name: storey_range, dtype: int64"
       ]
      },
-     "execution_count": 166,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -631,7 +630,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 167,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -692,7 +691,7 @@
        "4           2"
       ]
      },
-     "execution_count": 167,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -712,7 +711,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 168,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -732,7 +731,7 @@
        "Name: remaining_lease, Length: 663, dtype: int64"
       ]
      },
-     "execution_count": 168,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -743,7 +742,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 169,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -804,7 +803,7 @@
        "4           62.42"
       ]
      },
-     "execution_count": 169,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -825,7 +824,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 170,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -836,7 +835,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 171,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -1027,7 +1026,7 @@
        "[149631 rows x 8 columns]"
       ]
      },
-     "execution_count": 171,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1038,7 +1037,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 172,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
