Divided data into each region

--- a/main.ipynb
+++ b/main.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 103,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 104,
    "metadata": {},
    "outputs": [
     {
@@ -146,7 +146,7 @@
        "4      265000.0  "
       ]
      },
-     "execution_count": 2,
+     "execution_count": 104,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -159,7 +159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 105,
    "metadata": {},
    "outputs": [
     {
@@ -263,7 +263,7 @@
        "4  62 years 05 months      265000.0  "
       ]
      },
-     "execution_count": 3,
+     "execution_count": 105,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -276,7 +276,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 106,
    "metadata": {},
    "outputs": [
     {
@@ -343,7 +343,7 @@
        "4       2017           1"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 106,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -359,7 +359,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 107,
    "metadata": {},
    "outputs": [
     {
@@ -405,7 +405,7 @@
        "Name: town, dtype: int64"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 107,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -417,7 +417,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 108,
    "metadata": {},
    "outputs": [
     {
@@ -431,7 +431,7 @@
        "Name: region, dtype: int64"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 108,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -467,13 +467,13 @@
     "    'YISHUN': 'NORTH'\n",
     "}\n",
     "data['region'] = data['town'].transform(lambda t: region[t])\n",
-    "data = data.drop('town', axis=1)\n",
+    "# data = data.drop('town', axis=1)\n",
     "data['region'].value_counts()\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 109,
    "metadata": {},
    "outputs": [
     {
@@ -489,7 +489,7 @@
        "Name: flat_type, dtype: int64"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 109,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -500,7 +500,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 110,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -510,7 +510,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 111,
    "metadata": {},
    "outputs": [
     {
@@ -571,7 +571,7 @@
        "4         3"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 111,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -593,7 +593,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 112,
    "metadata": {},
    "outputs": [
     {
@@ -619,7 +619,7 @@
        "Name: storey_range, dtype: int64"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 112,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -630,7 +630,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 113,
    "metadata": {},
    "outputs": [
     {
@@ -691,7 +691,7 @@
        "4           2"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 113,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -711,7 +711,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 114,
    "metadata": {},
    "outputs": [
     {
@@ -731,7 +731,7 @@
        "Name: remaining_lease, Length: 663, dtype: int64"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 114,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -742,7 +742,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 115,
    "metadata": {},
    "outputs": [
     {
@@ -803,7 +803,7 @@
        "4           62.42"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 115,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -824,7 +824,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 116,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -835,7 +835,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 117,
    "metadata": {},
    "outputs": [
     {
@@ -859,6 +859,7 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
+       "      <th>town</th>\n",
        "      <th>room_num</th>\n",
        "      <th>storey_avg</th>\n",
        "      <th>floor_area_sqm</th>\n",
@@ -872,6 +873,7 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
+       "      <td>ANG MO KIO</td>\n",
        "      <td>2</td>\n",
        "      <td>11</td>\n",
        "      <td>44.0</td>\n",
@@ -883,6 +885,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
+       "      <td>ANG MO KIO</td>\n",
        "      <td>3</td>\n",
        "      <td>2</td>\n",
        "      <td>67.0</td>\n",
@@ -894,6 +897,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
+       "      <td>ANG MO KIO</td>\n",
        "      <td>3</td>\n",
        "      <td>2</td>\n",
        "      <td>67.0</td>\n",
@@ -905,6 +909,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
+       "      <td>ANG MO KIO</td>\n",
        "      <td>3</td>\n",
        "      <td>5</td>\n",
        "      <td>68.0</td>\n",
@@ -916,6 +921,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
+       "      <td>ANG MO KIO</td>\n",
        "      <td>3</td>\n",
        "      <td>2</td>\n",
        "      <td>67.0</td>\n",
@@ -935,9 +941,11 @@
        "      <td>...</td>\n",
        "      <td>...</td>\n",
        "      <td>...</td>\n",
+       "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>149698</th>\n",
+       "      <td>YISHUN</td>\n",
        "      <td>6</td>\n",
        "      <td>11</td>\n",
        "      <td>146.0</td>\n",
@@ -949,6 +957,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>149699</th>\n",
+       "      <td>YISHUN</td>\n",
        "      <td>6</td>\n",
        "      <td>2</td>\n",
        "      <td>146.0</td>\n",
@@ -960,6 +969,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>149700</th>\n",
+       "      <td>YISHUN</td>\n",
        "      <td>6</td>\n",
        "      <td>5</td>\n",
        "      <td>142.0</td>\n",
@@ -971,6 +981,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>149701</th>\n",
+       "      <td>YISHUN</td>\n",
        "      <td>6</td>\n",
        "      <td>11</td>\n",
        "      <td>146.0</td>\n",
@@ -982,6 +993,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>149702</th>\n",
+       "      <td>YISHUN</td>\n",
        "      <td>6</td>\n",
        "      <td>2</td>\n",
        "      <td>164.0</td>\n",
@@ -993,22 +1005,22 @@
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>149631 rows × 8 columns</p>\n",
+       "<p>149631 rows × 9 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "        room_num  storey_avg  floor_area_sqm remaining_lease  \\\n",
-       "0              2          11            44.0           61.33   \n",
-       "1              3           2            67.0           60.58   \n",
-       "2              3           2            67.0           62.42   \n",
-       "3              3           5            68.0           62.08   \n",
-       "4              3           2            67.0           62.42   \n",
-       "...          ...         ...             ...             ...   \n",
-       "149698         6          11           146.0           64.67   \n",
-       "149699         6           2           146.0           64.50   \n",
-       "149700         6           5           142.0           64.25   \n",
-       "149701         6          11           146.0           63.42   \n",
-       "149702         6           2           164.0           68.25   \n",
+       "              town  room_num  storey_avg  floor_area_sqm remaining_lease  \\\n",
+       "0       ANG MO KIO         2          11            44.0           61.33   \n",
+       "1       ANG MO KIO         3           2            67.0           60.58   \n",
+       "2       ANG MO KIO         3           2            67.0           62.42   \n",
+       "3       ANG MO KIO         3           5            68.0           62.08   \n",
+       "4       ANG MO KIO         3           2            67.0           62.42   \n",
+       "...            ...       ...         ...             ...             ...   \n",
+       "149698      YISHUN         6          11           146.0           64.67   \n",
+       "149699      YISHUN         6           2           146.0           64.50   \n",
+       "149700      YISHUN         6           5           142.0           64.25   \n",
+       "149701      YISHUN         6          11           146.0           63.42   \n",
+       "149702      YISHUN         6           2           164.0           68.25   \n",
        "\n",
        "        resale_price_100k  year_sold  month_sold   region  \n",
        "0                    2.32       2017           1  CENTRAL  \n",
@@ -1023,10 +1035,10 @@
        "149701               8.18       2023           3    NORTH  \n",
        "149702               9.75       2023           3    NORTH  \n",
        "\n",
-       "[149631 rows x 8 columns]"
+       "[149631 rows x 9 columns]"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 117,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1037,11 +1049,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 118,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Export cleaned data\n",
     "data.to_csv('data_cleaned.csv')\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Export regional data\n",
+    "data_north = data.loc[data['region'] == 'NORTH'].drop('region', axis=1)\n",
+    "data_south = data.loc[data['region'] == 'SOUTH'].drop('region', axis=1)\n",
+    "data_east = data.loc[data['region'] == 'EAST'].drop('region', axis=1)\n",
+    "data_west = data.loc[data['region'] == 'WEST'].drop('region', axis=1)\n",
+    "data_central = data.loc[data['region'] == 'CENTRAL'].drop('region', axis=1)\n",
+    "data_north.to_csv('data_north.csv')\n",
+    "data_south.to_csv('data_south.csv')\n",
+    "data_east.to_csv('data_east.csv')\n",
+    "data_west.to_csv('data_west.csv')\n",
+    "data_central.to_csv('data_central.csv')"
    ]
   }
  ],
