--- a/main.ipynb
+++ b/main.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -146,7 +146,7 @@
        "4      265000.0  "
       ]
      },
-     "execution_count": 104,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -159,7 +159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -263,20 +263,21 @@
        "4  62 years 05 months      265000.0  "
       ]
      },
-     "execution_count": 105,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Remove redundant attributes - block, flat_model, lease_commence_date\n",
-    "data = data.drop(['block', 'street_name', 'flat_model', 'lease_commence_date'], axis=1)\n",
+    "data = data.drop(['block', 'street_name', 'flat_model',\n",
+    "                 'lease_commence_date'], axis=1)\n",
     "data.head()\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -343,7 +344,7 @@
        "4       2017           1"
       ]
      },
-     "execution_count": 106,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -359,7 +360,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -405,7 +406,7 @@
        "Name: town, dtype: int64"
       ]
      },
-     "execution_count": 107,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -417,25 +418,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "EAST       53093\n",
-       "NORTH      36986\n",
-       "WEST       34107\n",
-       "CENTRAL    15126\n",
-       "SOUTH      10391\n",
-       "Name: region, dtype: int64"
-      ]
-     },
-     "execution_count": 108,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Classification based on region\n",
     "region = {\n",
@@ -466,14 +451,12 @@
     "    'WOODLANDS': 'NORTH',\n",
     "    'YISHUN': 'NORTH'\n",
     "}\n",
-    "data['region'] = data['town'].transform(lambda t: region[t])\n",
-    "# data = data.drop('town', axis=1)\n",
-    "data['region'].value_counts()\n"
+    "data['region'] = data['town'].transform(lambda t: region[t])\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -489,7 +472,7 @@
        "Name: flat_type, dtype: int64"
       ]
      },
-     "execution_count": 109,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -500,7 +483,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -510,7 +493,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -571,7 +554,7 @@
        "4         3"
       ]
      },
-     "execution_count": 111,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -593,7 +576,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -619,7 +602,7 @@
        "Name: storey_range, dtype: int64"
       ]
      },
-     "execution_count": 112,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -630,7 +613,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -691,7 +674,7 @@
        "4           2"
       ]
      },
-     "execution_count": 113,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -711,7 +694,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -731,7 +714,7 @@
        "Name: remaining_lease, Length: 663, dtype: int64"
       ]
      },
-     "execution_count": 114,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -742,7 +725,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -803,7 +786,7 @@
        "4           62.42"
       ]
      },
-     "execution_count": 115,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -824,7 +807,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -835,7 +818,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -1038,7 +1021,7 @@
        "[149631 rows x 9 columns]"
       ]
      },
-     "execution_count": 117,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1049,7 +1032,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1059,7 +1042,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "EAST       53070\n",
+       "NORTH      36948\n",
+       "WEST       34107\n",
+       "CENTRAL    15115\n",
+       "SOUTH      10391\n",
+       "Name: region, dtype: int64"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data['region'].value_counts()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1073,7 +1081,7 @@
     "data_south.to_csv('data_south.csv')\n",
     "data_east.to_csv('data_east.csv')\n",
     "data_west.to_csv('data_west.csv')\n",
-    "data_central.to_csv('data_central.csv')"
+    "data_central.to_csv('data_central.csv')\n"
    ]
   }
  ],
