--- a/main.ipynb
+++ b/main.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [
     {
@@ -146,20 +146,20 @@
        "4      265000.0  "
       ]
      },
-     "execution_count": 2,
+     "execution_count": 68,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "data = pd.read_csv(\n",
-    "    \"resale-flat-prices-based-on-registration-date-from-jan-2017-onwards.csv\")\n",
+    "    \"data/raw/resale-flat-prices-based-on-registration-date-from-jan-2017-onwards.csv\")\n",
     "data.head()\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [
     {
@@ -263,7 +263,7 @@
        "4  62 years 05 months      265000.0  "
       ]
      },
-     "execution_count": 3,
+     "execution_count": 69,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -277,7 +277,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [
     {
@@ -344,7 +344,7 @@
        "4       2017           1"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 70,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -360,7 +360,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [
     {
@@ -406,7 +406,7 @@
        "Name: town, dtype: int64"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 71,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -418,7 +418,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -456,7 +456,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [
     {
@@ -472,7 +472,7 @@
        "Name: flat_type, dtype: int64"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 73,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -483,7 +483,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -493,7 +493,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [
     {
@@ -554,7 +554,7 @@
        "4         3"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 75,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -576,7 +576,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [
     {
@@ -602,7 +602,7 @@
        "Name: storey_range, dtype: int64"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 76,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -613,7 +613,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [
     {
@@ -674,7 +674,7 @@
        "4           2"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 77,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -694,7 +694,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 78,
    "metadata": {},
    "outputs": [
     {
@@ -714,7 +714,7 @@
        "Name: remaining_lease, Length: 663, dtype: int64"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 78,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -725,7 +725,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 79,
    "metadata": {},
    "outputs": [
     {
@@ -786,7 +786,7 @@
        "4           62.42"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 79,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -807,7 +807,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 80,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -818,7 +818,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 81,
    "metadata": {},
    "outputs": [
     {
@@ -1021,7 +1021,7 @@
        "[149631 rows x 9 columns]"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 81,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1032,17 +1032,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 82,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Export cleaned data\n",
-    "data.to_csv('data_cleaned.csv')\n"
+    "data.to_csv('data/processed/data_processed.csv')\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 83,
    "metadata": {},
    "outputs": [
     {
@@ -1056,7 +1056,7 @@
        "Name: region, dtype: int64"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 83,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1067,7 +1067,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 84,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1077,11 +1077,11 @@
     "data_east = data.loc[data['region'] == 'EAST'].drop('region', axis=1)\n",
     "data_west = data.loc[data['region'] == 'WEST'].drop('region', axis=1)\n",
     "data_central = data.loc[data['region'] == 'CENTRAL'].drop('region', axis=1)\n",
-    "data_north.to_csv('data_north.csv')\n",
-    "data_south.to_csv('data_south.csv')\n",
-    "data_east.to_csv('data_east.csv')\n",
-    "data_west.to_csv('data_west.csv')\n",
-    "data_central.to_csv('data_central.csv')\n"
+    "data_north.to_csv('data/processed/data_north.csv')\n",
+    "data_south.to_csv('data/processed/data_south.csv')\n",
+    "data_east.to_csv('data/processed/data_east.csv')\n",
+    "data_west.to_csv('data/processed/data_west.csv')\n",
+    "data_central.to_csv('data/processed/data_central.csv')\n"
    ]
   }
  ],
